[FIX] Incorrect margin and refactor some CSS Ensure correct margins on mobile home page

--- a/src/App.css
+++ b/src/App.css
@@ -318,3 +318,25 @@ label, p, input[type=text], main > span, main div > span {
   color: var(--text-color-tinted);
   background-color: var(--primary-color-tinted);
 }
+
+.progress-history-container {
+	display: table;
+	table-layout: auto;
+	column-gap: 10px;
+	width: 100%;
+	row-gap: 8px;
+  margin-bottom: 10px;
+}
+
+.progress-history-container > div {
+	display: table-row;
+}
+
+.progress-history-container > div > * {
+	display: table-cell;
+	word-wrap: break-word;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	text-decoration: none;
+	color: inherit;
+}
